--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
 
 <h3>We recommend students watch these videos in the order listed.  Master the material in each video before moving on to the next. Later videos build on knowledge aquired in earlier videos.  Go back and review videos when necessary.
 <br><br>
-This website does not use cookies, and will not store or distribute any viewer data or information.
-<br><br>
 For those of you teaching or studying electronics:  We hope this site supplements your learning materials effectively, adds clarity, and deepens your understanding of electronic fundamentals.
-<br><br>
-Choose meaningful career paths, and work with organizations whose intensions are aligned with your beliefs and your values.
-</h3>
 </h3>
 
 
@@ -48,7 +43,11 @@ Choose meaningful career paths, and work with organizations whose intensions are
       <li><a href="https://youtu.be/6Mp4wiWeGe4" target="_blank">A Simple Resistor Inductor (RL) Circuit</a></li>
 
     </ul>
-
+<br><br>
+<h3><center>Choose meaningful career paths.  Work with organizations whose intensions are aligned with your beliefs and your values.
+<br>
+This website does not use cookies, and will not store or distribute any viewer data or information.</h3></center>
+<br><br>
 </body>
 </html>
 
