--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ For those of you teaching or studying electronics:  We hope this site supplement
 <br><br>
 <h3><center>Choose meaningful career paths.  Work with organizations whose intensions are aligned with your beliefs and your values.
 <br>
-This website does not use cookies, and will not store or distribute any viewer data or information.</h3></center>
+This website does not use cookies, and will not store or distribute viewer information.</h3></center>
 <br><br>
 </body>
 </html>
