--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
 
-<h3>We recommend students watch these videos in the order listed.  Master the material in each video before moving on to the next. Later videos build on knowledge aquired in earlier videos.  Go back and review videos when necessary.
+<h3>Watch videos in the order listed.  Master the material in each video before moving on to the next. Later videos build on knowledge aquired in earlier videos.  Go back and review videos when necessary.
 <br><br>
-For those of you teaching or studying electronics:  We hope this site supplements your learning materials effectively, adds clarity, and deepens your understanding of electronic fundamentals.
+We hope this site will supplement your learning materials effectively, adds clarity, and deepen your understanding of electronic fundamentals.
 </h3>
 
 
@@ -44,9 +44,9 @@ For those of you teaching or studying electronics:  We hope this site supplement
 
     </ul>
 <br><br>
-<h3><center>Choose meaningful career paths.  Work with organizations whose intensions are aligned with your beliefs and your values.
+<h3><center>Work with organizations whose intensions are aligned with your beliefs.
 <br>
-This website does not use cookies, and will not store or distribute viewer information.</h3></center>
+This website will not store or distribute viewer information.</h3></center>
 <br><br>
 </body>
 </html>
