--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <h3>Watch videos in the order listed.  Master the material in each video before moving on to the next. Later videos build on knowledge aquired in earlier videos.  Go back and review videos when necessary.
 <br><br>
-We hope this site will supplement your learning materials effectively, adds clarity, and deepen your understanding of electronic fundamentals.
+This site will supplement your learning materials effectively, add clarity, and deepen your understanding of electronic fundamentals.
 </h3>
 
 
@@ -45,7 +45,7 @@ We hope this site will supplement your learning materials effectively, adds clar
     </ul>
 <br><br>
 <h3><center>Work with organizations whose intensions are aligned with your beliefs.
-<br>
+<br><br>
 This website will not store or distribute viewer information.</h3></center>
 <br><br>
 </body>
