--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ This site will supplement your learning materials effectively, add clarity, and 
       <li><a href="https://youtu.be/6Mp4wiWeGe4" target="_blank">A Simple Resistor Inductor (RL) Circuit</a></li>
 
     </ul>
-<br><br>
+<br>
 <h3><center>Work with organizations whose intensions are aligned with your beliefs.
 <br><br>
-This website will not store or distribute viewer information.</h3></center>
+This website does not store or distribute viewer information.</h3></center>
 <br><br>
 </body>
 </html>
