--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ This site will supplement your learning materials effectively, add clarity, and 
 
     </ul>
 <br>
-<h3><center>Work with organizations whose intensions are aligned with your beliefs.
+<h3><center>Work only with organizations whose intensions are aligned with your own personal beliefs.
 <br><br>
 This website does not store or distribute viewer information.</h3></center>
 <br><br>
