--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
- 
 <html>
 
 <head>
@@ -13,12 +12,16 @@
 
 <body>
 
-<h3>Watch videos in the order listed.  Master the material in each video before moving on to the next. Later videos build on knowledge aquired in earlier videos.  Go back and review videos when necessary.
+<h3><p>Watch videos in the order listed.  Master the material in each video before moving on to the next. Later videos build on knowledge aquired in earlier videos.  Go back and review videos when necessary.
 <br><br>
 This site will supplement your learning materials effectively, add clarity, and deepen your understanding of electronic fundamentals.
-</h3>
+</h3></p>
 
-
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      
 <h2>Electronic Fundamentals:</h2>
       <li><a href="https://youtu.be/iySiJcQl2gk" target="_blank">What is Current? (Part 1)</a></li>
       <li><a href="https://youtu.be/I7Wl7q6fW0A" target="_blank">What is Current? (Part 2)</a></li>
@@ -43,6 +46,17 @@ This site will supplement your learning materials effectively, add clarity, and 
       <li><a href="https://youtu.be/6Mp4wiWeGe4" target="_blank">A Simple Resistor Inductor (RL) Circuit</a></li>
 
     </ul>
+
+</div>
+<div class="col"><br><br><br><br><br><br>
+      <center><img src="https://drive.google.com/file/d/17uN-n0pgxOEvZ7YYgm8SKL2urvOxcJQD/view?usp=drive_link" alt="Drawing / Image" width="500" height="281">
+</center>
+    </div>
+  </div>
+</div>
+
+
+
 <br>
 <h3><center>Work only with organizations whose intensions are aligned with your own personal beliefs.
 <br><br>
@@ -50,6 +64,8 @@ This website does not store or distribute viewer information.</h3></center>
 <br><br>
 </body>
 </html>
+
+    
 
 <h2>Semiconductor Electronics:</h2>
       <li>Videos coming soon!</li>
