--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
 
-<h3><p>Watch videos in the order listed.  Master the material in each video before moving on to the next. Later videos build on knowledge aquired in earlier videos.  Go back and review videos when necessary.
+<h3>Watch videos in the order listed.  Master the material in each video before moving on to the next. Later videos build on knowledge aquired in earlier videos.  Go back and review videos when necessary.
 <br><br>
 This site will supplement your learning materials effectively, add clarity, and deepen your understanding of electronic fundamentals.
-</h3></p>
+</h3>
 
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
 <div class="container">
@@ -48,8 +48,9 @@ This site will supplement your learning materials effectively, add clarity, and 
     </ul>
 
 </div>
-<div class="col"><br><br><br><br><br><br>
-      <center><img src="https://drive.google.com/file/d/17uN-n0pgxOEvZ7YYgm8SKL2urvOxcJQD/view?usp=drive_link" alt="Drawing / Image" width="500" height="281">
+<div class="col"><br><br><br><br>
+      <center><img src="Image 1.jpg" alt="Circuit Drawing" style="width:546px;height:307px;">
+
 </center>
     </div>
   </div>
