--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
 
 <head>
@@ -45,8 +46,6 @@ This site will supplement your learning materials effectively, add clarity, and 
       <li><a href="https://youtu.be/9xrrbs0N_II" target="_blank">A Simple Resistor Capacitor (RC) Circuit</a></li>
       <li><a href="https://youtu.be/6Mp4wiWeGe4" target="_blank">A Simple Resistor Inductor (RL) Circuit</a></li>
 
-    </ul>
-
 </div>
 <div class="col"><br><br><br><br>
       <center><img src="Image 1.jpg" alt="Circuit Drawing" style="width:546px;height:307px;">
@@ -59,14 +58,48 @@ This site will supplement your learning materials effectively, add clarity, and 
 
 
 <br>
-<h3><center>Work only with organizations whose intensions are aligned with your own personal beliefs.
-<br><br>
+<h3><center>Work with organizations whose intensions are aligned with your beliefs.
+<br>
 This website does not store or distribute viewer information.</h3></center>
 <br><br>
 </body>
 </html>
 
-    
+
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
+<div class="container">
+  <div class="row">
+    <div class="col">
+
+<br><br><br><br>
+      <center><img src="Image 2.jpg" alt="Circuit Drawing" style="width:546px;height:307px;"></center>
+
+</div>
+<div class="col">
 
 <h2>Semiconductor Electronics:</h2>
+      <li><a href="https://youtu.be/HR3lCBbW9WU" target="_blank">Semiconductor Overview</a></li>
+      <li><a href="https://youtu.be/1hvWUvyEktU" target="_blank">N type versus P type Silicon and Mobility</a></li>
+      <li><a href="https://youtu.be/dY0ELiYJrXQ" target="_blank">The PN Junction Diode (Part 1)</a></li>
+      <li><a href="https://youtu.be/XJqPgSRFUso" target="_blank">The PN Junction Diode (Part 2)</a></li>
+      <li><a href="https://youtu.be/Y7XzNWBtp1w" target="_blank">Diode Math</a></li>
+      <li><a href="https://youtu.be/4H7b0u9DBUg" target="_blank">A Simple Diode Circuit Design</a></li>
+      <li><a href="https://youtu.be/fUgAixp3dwg" target="_blank">The NPN Bipolar Transistor Overview</a></li>
+      <li><a href="https://youtu.be/vyEFSo5rflY" target="_blank">The PNP Bipolar Transistor Overview</a></li>
+      <li><a href="https://youtu.be/_1yyHybFTO4" target="_blank">Bipolar Burglar Alarm Circuit Design (Part 1)</a></li>
+      <li><a href="https://youtu.be/6rlp8E-xylI" target="_blank">Bipolar Burglar Alarm Circuit Design (Part 2)</a></li>
+      <li><a href="https://youtu.be/98eBuxujEyg" target="_blank">Bipolar Burglar Alarm Circuit Design (Part 3)</a></li>
+      <li><a href="https://youtu.be/k4Oz9wfKpNQ" target="_blank">Bipolar Burglar Alarm Circuit Design (Part 4)</a></li>
+      <li><a href="https://youtu.be/XV0-VZMMLeY" target="_blank">Bipolar Integrated Circuit Construction</a></li>
+      <li><a href="https://youtu.be/lH-GNzKdT-Q" target="_blank">Mosfet Transistor: N-Channel and P-Channel</a></li>
+      <li><a href="https://youtu.be/EIQrVBQW5LQ" target="_blank">The Electric Field (E-Field)</a></li>
+      <li><a href="https://youtu.be/dErS5ACt-qU" target="_blank">The N-Channel Mosfet Transistor (NMOS, NFET)</a></li>
+      <li><a href="https://youtu.be/MeB2tgnbPik" target="_blank">The P-Channel Mosfet Transistor (PMOS, PFET)</a></li>
+
+
+    </div>
+  </div>
+</div>
+
+<h2>CMOS Digital Circuits:</h2>
       <li>Videos coming soon!</li>
