--- a/index.html
+++ b/index.html
@@ -96,6 +96,34 @@ This website does not store or distribute viewer information.</h3></center>
       <li><a href="https://youtu.be/dErS5ACt-qU" target="_blank">The N-Channel Mosfet Transistor (NMOS, NFET)</a></li>
       <li><a href="https://youtu.be/MeB2tgnbPik" target="_blank">The P-Channel Mosfet Transistor (PMOS, PFET)</a></li>
 
+</div>
+<div class="col"><br>
+
+
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+<H3> Request a copy Professor Bob's book.</H3>
+<H7><a href="mailto:Bob@LearnCircuitDesign.com?subject=The Self-Generating Universe&body=Do not store or share my personal information, and send a copy of Professor Bob's book to:">The Self-Generating Universe</a></H7><br>
+<H7>This book is not on the subject of electronic circuit design.</H7><br>
+<H7>Your information will not be stored or shared.</H7>
+
+
+</div>
+<div class="col"><br>
+      <img src="Dad's Book.jpg" alt="The Self-Generating Universe by Robert Amneus" style="width:275px;height:425px;">
+
+
 
     </div>
   </div>
