--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
 
 <head>
@@ -13,10 +12,9 @@
 
 <body>
 
-<h3>Watch videos in the order listed.  Master the material in each video before moving on to the next. Later videos build on knowledge aquired in earlier videos.  Go back and review videos when necessary.
+<h3>Watch videos in the order listed.  Master the material in each video before moving on to the next. Later videos build on knowledge acquired in earlier videos.  Go back and review videos when necessary.
 <br><br>
-This site will supplement your learning materials effectively, add clarity, and deepen your understanding of electronic fundamentals.
-</h3>
+This site will supplement your learning materials effectively, add clarity, and deepen your understanding of electronic fundamentals.</h3>
 
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
 <div class="container">
@@ -47,7 +45,8 @@ This site will supplement your learning materials effectively, add clarity, and 
       <li><a href="https://youtu.be/6Mp4wiWeGe4" target="_blank">A Simple Resistor Inductor (RL) Circuit</a></li>
 
 </div>
-<div class="col"><br><br><br><br>
+<div class="col">
+<br><br><br><br><br><br>
       <center><img src="Image 1.jpg" alt="Circuit Drawing" style="width:546px;height:307px;">
 
 </center>
@@ -62,8 +61,6 @@ This site will supplement your learning materials effectively, add clarity, and 
 <br>
 This website does not store or distribute viewer information.</h3></center>
 <br><br>
-</body>
-</html>
 
 
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
@@ -96,8 +93,12 @@ This website does not store or distribute viewer information.</h3></center>
       <li><a href="https://youtu.be/dErS5ACt-qU" target="_blank">The N-Channel Mosfet Transistor (NMOS, NFET)</a></li>
       <li><a href="https://youtu.be/MeB2tgnbPik" target="_blank">The P-Channel Mosfet Transistor (PMOS, PFET)</a></li>
 
+</center>
+    </div>
+  </div>
 </div>
-<div class="col"><br>
+<br><br>
+<H3><center> Request a copy Professor Bob's book.</H3></center>
 
 
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
@@ -105,26 +106,20 @@ This website does not store or distribute viewer information.</h3></center>
   <div class="row">
     <div class="col">
       
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 
-<H3> Request a copy Professor Bob's book.</H3>
+<br><br><br><br><br><br><right>
 <H7><a href="mailto:Bob@LearnCircuitDesign.com?subject=The Self-Generating Universe&body=Do not store or share my personal information, and send a copy of Professor Bob's book to:">The Self-Generating Universe</a></H7><br>
 <H7>This book is not on the subject of electronic circuit design.</H7><br>
-<H7>Your information will not be stored or shared.</H7>
+<H7>Your information will not be stored or shared.</H7></right>
 
 
 </div>
-<div class="col"><br>
+<div class="col">
       <img src="Dad's Book.jpg" alt="The Self-Generating Universe by Robert Amneus" style="width:275px;height:425px;">
 
 
-
+</center>
     </div>
   </div>
 </div>
