--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ This site will supplement your learning materials effectively, add clarity, and 
   <div class="row">
     <div class="col">
       
+<br><br>
 <h2>Electronic Fundamentals:</h2>
       <li><a href="https://youtu.be/iySiJcQl2gk" target="_blank">What is Current? (Part 1)</a></li>
       <li><a href="https://youtu.be/I7Wl7q6fW0A" target="_blank">What is Current? (Part 2)</a></li>
@@ -108,10 +109,10 @@ This website does not store or distribute viewer information.</h3></center>
       
 
 
-<br><br><br><br><br><br><right>
+<br><br><br><br><br><br>
 <H7><a href="mailto:Bob@LearnCircuitDesign.com?subject=The Self-Generating Universe&body=Do not store or share my personal information, and send a copy of Professor Bob's book to:">The Self-Generating Universe</a></H7><br>
 <H7>This book is not on the subject of electronic circuit design.</H7><br>
-<H7>Your information will not be stored or shared.</H7></right>
+<H7>Your information will not be stored or shared.</H7>
 
 
 </div>
@@ -124,5 +125,6 @@ This website does not store or distribute viewer information.</h3></center>
   </div>
 </div>
 
+<br><br>
 <h2>CMOS Digital Circuits:</h2>
       <li>Videos coming soon!</li>
