--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ This website does not store or distribute viewer information.</h3></center>
   </div>
 </div>
 <br><br>
-<H3><center> Request a copy Professor Bob's book.</H3></center>
+<H3><center> Request a free copy Professor Bob's book.</H3></center>
 
 
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
