--- a/index.html
+++ b/index.html
@@ -1,130 +1,157 @@
-<html>
-
-<head>
-
-<title>Learn Circuit Design</title>
-
-<center><h1>Learn Circuit Design</h1>
-
-<h3>Please <a href=”https://https://www.youtube.com/channel/UCEAY8b6upYxdlOecBAT0QQA?sub_confirmation=1” target="popup" onclick="window.open('https://www.youtube.com/channel/UCEAY8b6upYxdlOecBAT0QQA?sub_confirmation=1','popup','width=700,height=400'); return false;">subscribe</a> to Professor Bob's Youtube channel.</h3></center>
-
-</head>
-
-<body>
-
-<h3>Watch videos in the order listed.  Master the material in each video before moving on to the next. Later videos build on knowledge acquired in earlier videos.  Go back and review videos when necessary.
+	<html>
+	
+	<head>
+	
+	<title>Learn Circuit Design</title>
+	
+	<center><h1>Learn Circuit Design</h1>
+	
+	<h3>Please <a href=”https://https://www.youtube.com/channel/UCEAY8b6upYxdlOecBAT0QQA?sub_confirmation=1” target="popup" onclick="window.open('https://www.youtube.com/channel/UCEAY8b6upYxdlOecBAT0QQA?sub_confirmation=1','popup','width=700,height=400'); return false;">subscribe</a> to Professor Bob's Youtube channel.</h3></center>
+	
+	</head>
+	
+	<body>
+	
+	<h3>Watch videos in the order listed. Master the material in each video before moving on to the next. Later videos build on knowledge acquired in earlier videos. Go back and review videos when necessary.
+	<br><br>
+	This site will supplement your learning materials effectively, add clarity, and deepen your understanding of electronic fundamentals.</h3>
+	
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
+	<div class="container">
+	<div class="row">
+	<div class="col">
+	
+	<br><br>
+	<h2>Electronic Fundamentals:</h2>
+	<li><a href="https://youtu.be/iySiJcQl2gk" target="_blank">What is Current? (Part 1)</a></li>
+	<li><a href="https://youtu.be/I7Wl7q6fW0A" target="_blank">What is Current? (Part 2)</a></li>
+	<li><a href="https://youtu.be/ta_6einR5lc" target="_blank">What is Current? (Part 3)</a></li>
+	<li><a href="https://youtu.be/UWBqfBHN1u0" target="_blank">What is Voltage and Resistance?</a></li>
+	<li><a href="https://youtu.be/K9nm71CHAj0" target="_blank">Ohm's Law</a></li>
+	<li><a href="https://youtu.be/d0b0F3wtUx8" target="_blank">Resistance and Resistivity</a></li>
+	<li><a href="https://youtu.be/ZQuxjNQUmtw" target="_blank">Sheet Resistance - Series and Parallel Resistors (Part 1)</a></li>
+	<li><a href="https://youtu.be/SLP4D1N3DFE" target="_blank">Series and Parallel Resistors (Part 2)</a></li>
+	<li><a href="https://youtu.be/kdrVcKQDhEU" target="_blank">What is Analog and Digital? (Part 1)</a></li>
+	<li><a href="https://youtu.be/Ul0NaQM8K3A" target="_blank">What is Analog and Digital? (Part 2)</a></li>
+	<li><a href="https://youtu.be/CV-qIheEPtg" target="_blank">Resistor Voltage Divider Circuits</a></li>
+	<li><a href="https://youtu.be/dohkLaIPnys" target="_blank">What is a Capacitor? (Part 1)</a></li>
+	<li><a href="https://youtu.be/z73rt_qCue4" target="_blank">What is a Capacitor? (Part 2)</a></li>
+	<li><a href="https://youtu.be/NShLkF-FCM8" target="_blank">Series and Parallel Capacitors.</a></li>
+	<li><a href="https://youtu.be/YvpAu7lcNjs" target="_blank">What is an Inductor? (Part 1)</a></li>
+	<li><a href="https://youtu.be/-giQAF57CpU" target="_blank">What is an Inductor? (Part 2)</a></li>
+	<li><a href="https://youtu.be/GKazvJ_vLNc" target="_blank">Induction Cooking</a></li>
+	<li><a href="https://youtu.be/vULw3Iyccj8" target="_blank">Capacitor and Inductor Math</a></li>
+	<li><a href="https://youtu.be/v6JM0FB0yYw" target="_blank">Resistor Review Problems</a></li>
+	<li><a href="https://youtu.be/9xrrbs0N_II" target="_blank">A Simple Resistor Capacitor (RC) Circuit</a></li>
+	<li><a href="https://youtu.be/6Mp4wiWeGe4" target="_blank">A Simple Resistor Inductor (RL) Circuit</a></li>
+	
+	</div>
+	<div class="col">
+	<br><br><br><br><br><br>
+	<center><img src="Image 1.jpg" alt="Circuit Drawing" style="width:546px;height:307px;">
+	
+	</center>
+	</div>
+	</div>
+	</div>
+	
+	
+	
+	<br>
+	<h3><center>Work with organizations whose intensions are aligned with your beliefs.
+	<br>
+	This website does not store or distribute viewer information.</h3></center>
+	<br><br>
+	
+	
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
+	<div class="container">
+	<div class="row">
+	<div class="col">
+	
+	<br><br><br><br>
+	<center><img src="Image 2.jpg" alt="Circuit Drawing" style="width:546px;height:307px;"></center>
+	
+	</div>
+	<div class="col">
+	
+	<h2>Semiconductor Electronics:</h2>
+	<li><a href="https://youtu.be/HR3lCBbW9WU" target="_blank">Semiconductor Overview</a></li>
+	<li><a href="https://youtu.be/1hvWUvyEktU" target="_blank">N type versus P type Silicon and Mobility</a></li>
+	<li><a href="https://youtu.be/dY0ELiYJrXQ" target="_blank">The PN Junction Diode (Part 1)</a></li>
+	<li><a href="https://youtu.be/XJqPgSRFUso" target="_blank">The PN Junction Diode (Part 2)</a></li>
+	<li><a href="https://youtu.be/Y7XzNWBtp1w" target="_blank">Diode Math</a></li>
+	<li><a href="https://youtu.be/4H7b0u9DBUg" target="_blank">A Simple Diode Circuit Design</a></li>
+	<li><a href="https://youtu.be/fUgAixp3dwg" target="_blank">The NPN Bipolar Transistor Overview</a></li>
+	<li><a href="https://youtu.be/vyEFSo5rflY" target="_blank">The PNP Bipolar Transistor Overview</a></li>
+	<li><a href="https://youtu.be/_1yyHybFTO4" target="_blank">Bipolar Burglar Alarm Circuit Design (Part 1)</a></li>
+	<li><a href="https://youtu.be/6rlp8E-xylI" target="_blank">Bipolar Burglar Alarm Circuit Design (Part 2)</a></li>
+	<li><a href="https://youtu.be/98eBuxujEyg" target="_blank">Bipolar Burglar Alarm Circuit Design (Part 3)</a></li>
+	<li><a href="https://youtu.be/k4Oz9wfKpNQ" target="_blank">Bipolar Burglar Alarm Circuit Design (Part 4)</a></li>
+	<li><a href="https://youtu.be/XV0-VZMMLeY" target="_blank">Bipolar Integrated Circuit Construction</a></li>
+	<li><a href="https://youtu.be/lH-GNzKdT-Q" target="_blank">Mosfet Transistor: N-Channel and P-Channel</a></li>
+	<li><a href="https://youtu.be/EIQrVBQW5LQ" target="_blank">The Electric Field (E-Field)</a></li>
+	<li><a href="https://youtu.be/dErS5ACt-qU" target="_blank">The N-Channel Mosfet Transistor (NMOS, NFET)</a></li>
+	<li><a href="https://youtu.be/MeB2tgnbPik" target="_blank">The P-Channel Mosfet Transistor (PMOS, PFET)</a></li>
+	
+	</center>
+	</div>
+	</div>
+	</div>
+	<br><br>
+	<H3><center> Request a free copy Professor Bob's book.</H3></center>
+	
+	
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
+	<div class="container">
+	<div class="row">
+	<div class="col">
+	
+	
+	
+	<br><br><br><br><br><br>
+	<H7><a href="mailto:Bob@LearnCircuitDesign.com?subject=The Self-Generating Universe&body=Do not store or share my personal information, and send a copy of Professor Bob's book to:">The Self-Generating Universe</a></H7><br>
+	<H7>This book is not on the subject of electronic circuit design.</H7><br>
+	<H7>Your information will not be stored or shared.</H7>
+	
+	
+	</div>
+	<div class="col">
+	<img src="Dad's Book.jpg" alt="The Self-Generating Universe by Robert Amneus" style="width:275px;height:425px;">
+	
+	
+	</center>
+	</div>
+	</div>
+	</div>
+	
+	<br><br>
 <br><br>
-This site will supplement your learning materials effectively, add clarity, and deepen your understanding of electronic fundamentals.</h3>
 
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
-<div class="container">
-  <div class="row">
-    <div class="col">
-      
-<br><br>
-<h2>Electronic Fundamentals:</h2>
-      <li><a href="https://youtu.be/iySiJcQl2gk" target="_blank">What is Current? (Part 1)</a></li>
-      <li><a href="https://youtu.be/I7Wl7q6fW0A" target="_blank">What is Current? (Part 2)</a></li>
-      <li><a href="https://youtu.be/ta_6einR5lc" target="_blank">What is Current? (Part 3)</a></li>
-      <li><a href="https://youtu.be/UWBqfBHN1u0" target="_blank">What is Voltage and Resistance?</a></li>
-      <li><a href="https://youtu.be/K9nm71CHAj0" target="_blank">Ohm's Law</a></li>
-      <li><a href="https://youtu.be/d0b0F3wtUx8" target="_blank">Resistance and Resistivity</a></li>
-      <li><a href="https://youtu.be/ZQuxjNQUmtw" target="_blank">Sheet Resistance - Series and Parallel Resistors (Part 1)</a></li>
-      <li><a href="https://youtu.be/SLP4D1N3DFE" target="_blank">Series and Parallel Resistors (Part 2)</a></li>
-      <li><a href="https://youtu.be/kdrVcKQDhEU" target="_blank">What is Analog and Digital? (Part 1)</a></li>
-      <li><a href="https://youtu.be/Ul0NaQM8K3A" target="_blank">What is Analog and Digital? (Part 2)</a></li>
-      <li><a href="https://youtu.be/CV-qIheEPtg" target="_blank">Resistor Voltage Divider Circuits</a></li>
-      <li><a href="https://youtu.be/dohkLaIPnys" target="_blank">What is a Capacitor? (Part 1)</a></li>
-      <li><a href="https://youtu.be/z73rt_qCue4" target="_blank">What is a Capacitor? (Part 2)</a></li>
-      <li><a href="https://youtu.be/NShLkF-FCM8" target="_blank">Series and Parallel Capacitors.</a></li>
-      <li><a href="https://youtu.be/YvpAu7lcNjs" target="_blank">What is an Inductor? (Part 1)</a></li>
-      <li><a href="https://youtu.be/-giQAF57CpU" target="_blank">What is an Inductor? (Part 2)</a></li>
-      <li><a href="https://youtu.be/GKazvJ_vLNc" target="_blank">Induction Cooking</a></li>
-      <li><a href="https://youtu.be/vULw3Iyccj8" target="_blank">Capacitor and Inductor Math</a></li>
-      <li><a href="https://youtu.be/v6JM0FB0yYw" target="_blank">Resistor Review Problems</a></li>
-      <li><a href="https://youtu.be/9xrrbs0N_II" target="_blank">A Simple Resistor Capacitor (RC) Circuit</a></li>
-      <li><a href="https://youtu.be/6Mp4wiWeGe4" target="_blank">A Simple Resistor Inductor (RL) Circuit</a></li>
-
-</div>
-<div class="col">
-<br><br><br><br><br><br>
-      <center><img src="Image 1.jpg" alt="Circuit Drawing" style="width:546px;height:307px;">
-
-</center>
-    </div>
-  </div>
-</div>
-
-
+	<div class="container">
+	<div class="row">
+	<div class="col">
 
 <br>
-<h3><center>Work with organizations whose intensions are aligned with your beliefs.
 <br>
-This website does not store or distribute viewer information.</h3></center>
-<br><br>
-
-
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
-<div class="container">
-  <div class="row">
-    <div class="col">
-
-<br><br><br><br>
-      <center><img src="Image 2.jpg" alt="Circuit Drawing" style="width:546px;height:307px;"></center>
+	<h2>CMOS Digital Circuits:</h2>
+	<li><a href="https://youtu.be/RfomJJl4Usk" target="_blank"> Using Mosfets to make the CMOS Inverter</a></li>
+	<li><a href="https://youtu.be/scSOhUCkXPs" target="_blank"> The CMOS Switch</a></li>
+	<li><a href="https://youtu.be/JPjzUl8GtME" target="_blank"> The CMOS Tri-State Driver, Latch and MUX</a></li>
+	<li><a href="https://youtu.be/bgrkt-r8Hb0" target="_blank"> The CMOS D-Flip Flop (DFF)</a></li>
+	<li><a href="https://youtu.be/AxvoKgfOaCE" target="_blank"> The CMOS NAND Gate and NOR Gate</a></li>
+	<li><a href="https://youtu.be/bhvKfKNSq8Q" target="_blank"> The CMOS RAM Cell </a></li>
+	<li><a href="https://youtu.be/N3j3XCIlJK4" target="_blank"> The Read Only Memory (ROM) and Flash Memory </a></li>
 
 </div>
-<div class="col">
-
-<h2>Semiconductor Electronics:</h2>
-      <li><a href="https://youtu.be/HR3lCBbW9WU" target="_blank">Semiconductor Overview</a></li>
-      <li><a href="https://youtu.be/1hvWUvyEktU" target="_blank">N type versus P type Silicon and Mobility</a></li>
-      <li><a href="https://youtu.be/dY0ELiYJrXQ" target="_blank">The PN Junction Diode (Part 1)</a></li>
-      <li><a href="https://youtu.be/XJqPgSRFUso" target="_blank">The PN Junction Diode (Part 2)</a></li>
-      <li><a href="https://youtu.be/Y7XzNWBtp1w" target="_blank">Diode Math</a></li>
-      <li><a href="https://youtu.be/4H7b0u9DBUg" target="_blank">A Simple Diode Circuit Design</a></li>
-      <li><a href="https://youtu.be/fUgAixp3dwg" target="_blank">The NPN Bipolar Transistor Overview</a></li>
-      <li><a href="https://youtu.be/vyEFSo5rflY" target="_blank">The PNP Bipolar Transistor Overview</a></li>
-      <li><a href="https://youtu.be/_1yyHybFTO4" target="_blank">Bipolar Burglar Alarm Circuit Design (Part 1)</a></li>
-      <li><a href="https://youtu.be/6rlp8E-xylI" target="_blank">Bipolar Burglar Alarm Circuit Design (Part 2)</a></li>
-      <li><a href="https://youtu.be/98eBuxujEyg" target="_blank">Bipolar Burglar Alarm Circuit Design (Part 3)</a></li>
-      <li><a href="https://youtu.be/k4Oz9wfKpNQ" target="_blank">Bipolar Burglar Alarm Circuit Design (Part 4)</a></li>
-      <li><a href="https://youtu.be/XV0-VZMMLeY" target="_blank">Bipolar Integrated Circuit Construction</a></li>
-      <li><a href="https://youtu.be/lH-GNzKdT-Q" target="_blank">Mosfet Transistor: N-Channel and P-Channel</a></li>
-      <li><a href="https://youtu.be/EIQrVBQW5LQ" target="_blank">The Electric Field (E-Field)</a></li>
-      <li><a href="https://youtu.be/dErS5ACt-qU" target="_blank">The N-Channel Mosfet Transistor (NMOS, NFET)</a></li>
-      <li><a href="https://youtu.be/MeB2tgnbPik" target="_blank">The P-Channel Mosfet Transistor (PMOS, PFET)</a></li>
+	<div class="col">
+	<center><img src="Image 3.jpg" alt="Random Access Memory" style="width:546px;height:307px;">
 
 </center>
-    </div>
-  </div>
-</div>
-<br><br>
-<H3><center> Request a free copy Professor Bob's book.</H3></center>
-
-
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
-<div class="container">
-  <div class="row">
-    <div class="col">
-      
-
-
-<br><br><br><br><br><br>
-<H7><a href="mailto:Bob@LearnCircuitDesign.com?subject=The Self-Generating Universe&body=Do not store or share my personal information, and send a copy of Professor Bob's book to:">The Self-Generating Universe</a></H7><br>
-<H7>This book is not on the subject of electronic circuit design.</H7><br>
-<H7>Your information will not be stored or shared.</H7>
-
-
-</div>
-<div class="col">
-      <img src="Dad's Book.jpg" alt="The Self-Generating Universe by Robert Amneus" style="width:275px;height:425px;">
-
-
-</center>
-    </div>
-  </div>
-</div>
+	</div>
+	</div>
+	</div>
 
 <br><br>
-<h2>CMOS Digital Circuits:</h2>
-      <li>Videos coming soon!</li>
+<br><br>
